Added teeny embedding of interpreter. Next up: running a script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,7 @@ include_directories(embedder
 add_executable(embedder
     ${CMAKE_CURRENT_SOURCE_DIR}/main.c
 )
+
+target_link_libraries(embedder
+    /usr/lib/python3.8/config-3.8-x86_64-linux-gnu/libpython3.8.so
+)
